Add EPICS Library guide for character lcd, sht7x, bme280

--- a/whoami/base_page.html
+++ b/whoami/base_page.html
@@ -14,17 +14,17 @@
   <header>
   </header>
   <aside>
-    <div id="db" class="db_side"><a href="#"><img id="db_img" src="../resources/images/db_icon.png" width="48" height="48" /></a></div>
+    <div id="de" class="de_side"><a href="#"><img id="de_img" src="../resources/images/debian_icon.png" width="48" height="48" /></a></div>
     <div id="ep" class="ep_side"><a href="#"><img id="ep_img" src="../resources/images/epics_icon.png" width="48" height="48" /></a></div>
     <div id="ra" class="ra_side"><a href="#"><img id="ra_img" src="../resources/images/pi_icon.png" width="48" height="48" /></a></div>
     <div id="ht" class="ht_side"><a href="#"><img id="ht_img" src="../resources/images/html5_icon.png" width="48" height="48" /></a></div>
     <div id="ja" class="ja_side"><a href="#"><img id="ja_img" src="../resources/images/java_icon.png" width="48" height="48" /></a></div>
   </aside>
-
-  <nav class="db_side db_menu">
+  <nav class="de_side de_menu">
     <ul>
-     <li><a href="Mysql.html">MySQL</a></li>
-     <li><a href="Postgresql.html">PostgreSQL</a></li>
+     <li><a href="Command.html">Command</a></li>
+     <li><a href="Script.html">Script</a></li>
+     <li><a href="Application.html">Application</a></li>
     </ul>
   </nav>
   <nav class="ep_side ep_menu">
