--- a/whoami/debian/Script.html
+++ b/whoami/debian/Script.html
@@ -3,13 +3,11 @@
 <html>
  <head>
   <title>Who am I</title>
-  <link rel="stylesheet" href="../resources/css/epics.css" type="text/css" />
-  <link rel="stylesheet" href="../resources/css/lightbox.css" type="text/css" />
+  <link rel="stylesheet" href="../resources/css/debian.css" type="text/css" />
   <script src="../resources/js/jquery-2.1.1.js"></script>
   <script src="../resources/js/common.js"></script>
-  <script src="../resources/js/lightbox.min.js"></script>
   <style>
-   body { background:#9932CC; }
+   body { background:#737373; }
   </style>
  </head>
  <body>
@@ -22,6 +20,7 @@
     <div id="ht" class="ht_side"><a href="#"><img id="ht_img" src="../resources/images/html5_icon.png" width="48" height="48" /></a></div>
     <div id="ja" class="ja_side"><a href="#"><img id="ja_img" src="../resources/images/java_icon.png" width="48" height="48" /></a></div>
   </aside>
+
   <nav class="de_side de_menu">
     <ul>
      <li><a href="../debian/Command.html">Command</a></li>
@@ -59,7 +58,6 @@
     </ul>
   </nav>
   <section>
-   <h1>EtherIP Driver Installation</h1>
   </section>
  </body>
 </html>
