--- a/whoami/index.html
+++ b/whoami/index.html
@@ -7,8 +7,8 @@
   <script type="text/javascript" src="resources/js/main.js"></script>
  </head>
  <body>
-   <div id="database" onmouseover="databaseMouseOver()" onmouseout="databaseMouseOut()">
-    <div id="database_icon"><a href="database/mysql.html"><img id="database_img" src="resources/images/db_200.png"/></a></div>
+   <div id="debian" onmouseover="debianMouseOver()" onmouseout="debianMouseOut()">
+    <div id="debian_icon"><a href="debian/Command.html"><img id="debian_img" src="resources/images/debian_200.png"/></a></div>
    </div>
    <div id="epics" onmouseover="epicsMouseOver()" onmouseout="epicsMouseOut()">
     <div id="epics_icon"><a href="epics/Configuration.html"><img id="epics_img" src="resources/images/epics_200.png" /></a></div>
