--- a/whoami/epics/Library.html
+++ b/whoami/epics/Library.html
@@ -14,24 +14,25 @@
   <header>
   </header>
    <aside>
-    <div id="db" class="db_side"><a href="#"><img id="db_img" src="../resources/images/db_icon.png" width="48" height="48" /></a></div>
+    <div id="de" class="de_side"><a href="#"><img id="de_img" src="../resources/images/debian_icon.png" width="48" height="48" /></a></div>
     <div id="ep" class="ep_side"><a href="#"><img id="ep_img" src="../resources/images/epics_icon.png" width="48" height="48" /></a></div>
     <div id="ra" class="ra_side"><a href="#"><img id="ra_img" src="../resources/images/pi_icon.png" width="48" height="48" /></a></div>
     <div id="ht" class="ht_side"><a href="#"><img id="ht_img" src="../resources/images/html5_icon.png" width="48" height="48" /></a></div>
     <div id="ja" class="ja_side"><a href="#"><img id="ja_img" src="../resources/images/java_icon.png" width="48" height="48" /></a></div>
   </aside>
-  <nav class="db_side db_menu">
+  <nav class="de_side de_menu">
     <ul>
-     <li><a href="../database/Mysql.html">MySQL</a></li>
-     <li><a href="../database/Postgresql.html">PostgreSQL</a></li>
+     <li><a href="../debian/Command.html">Command</a></li>
+     <li><a href="../debian/Script.html">Script</a></li>
+     <li><a href="../debian/Application.html">Application</a></li>
     </ul>
   </nav>
   <nav class="ep_side ep_menu">
     <ul>
-     <li><a href="Configuration.html">Configuration</a></li>
-     <li><a href="Library.html">Library</a></li>
-     <li><a href="Application.html">Application</a></li>
-     <li><a href="Extensition.html">Extensition</a></li>
+     <li><a href="../epics/Configuration.html">Configuration</a></li>
+     <li><a href="../epics/Library.html">Library</a></li>
+     <li><a href="../epics/Application.html">Application</a></li>
+     <li><a href="../epics/Extensition.html">Extensition</a></li>
     </ul>
   </nav>
   <nav class="ra_side ra_menu">
@@ -65,6 +66,9 @@
     <li><a href="libRaspDHT11.html">Raspberry Pi DHT11(Humidity & Temperature Sensor)</a></li>
     <li><a href="libRaspDHT22.html">Raspberry Pi DHT22(Humidity & Temperature Sensor)</a></li>
     <li><a href="libRaspDS1820.html">Raspberry Pi DS1820(Temperature Sensor)</a></li>
+    <li><a href="libRaspCharLCD.html">Raspberry Pi CharLCD(Character LCD1602, LCD1604)</a></li>
+    <li><a href="libRaspSHT7x.html">Raspberry Pi SHT7x(Humidity & Temperature Sensor)</a></li>
+    <li><a href="libRaspBME280.html">Raspberry Pi BME280(Multi Sensor T,H,P)</a></li>
     <li><a href="libGlassmanHV.html">Glassman High Voltage(FJ01N120, FJ10N12.0, ET50P040)</a></li>
    </ul>
   </section>
