--- a/whoami/raspberry/configWiFi.html
+++ b/whoami/raspberry/configWiFi.html
@@ -16,20 +16,20 @@
   <header>
   </header>
    <aside>
-   <aside>
-    <div id="db" class="db_side"><a href="#"><img id="db_img" src="../resources/images/db_icon.png" width="48" height="48" /></a></div>
+    <div id="de" class="de_side"><a href="#"><img id="de_img" src="../resources/images/debian_icon.png" width="48" height="48" /></a></div>
     <div id="ep" class="ep_side"><a href="#"><img id="ep_img" src="../resources/images/epics_icon.png" width="48" height="48" /></a></div>
     <div id="ra" class="ra_side"><a href="#"><img id="ra_img" src="../resources/images/pi_icon.png" width="48" height="48" /></a></div>
     <div id="ht" class="ht_side"><a href="#"><img id="ht_img" src="../resources/images/html5_icon.png" width="48" height="48" /></a></div>
     <div id="ja" class="ja_side"><a href="#"><img id="ja_img" src="../resources/images/java_icon.png" width="48" height="48" /></a></div>
   </aside>
-  <nav class="db_side db_menu">
+  <nav class="de_side de_menu">
     <ul>
-     <li><a href="../database/Mysql.html">MySQL</a></li>
-     <li><a href="../database/Postgresql.html">PostgreSQL</a></li>
+     <li><a href="../debian/Command.html">Command</a></li>
+     <li><a href="../debian/Script.html">Script</a></li>
+     <li><a href="../debian/Application.html">Application</a></li>
     </ul>
   </nav>
-  <nav class="ep_side ep_menu">
+ <nav class="ep_side ep_menu">
     <ul>
      <li><a href="../epics/Configuration.html">Configuration</a></li>
      <li><a href="../epics/Library.html">Library</a></li>
@@ -39,9 +39,9 @@
   </nav>
   <nav class="ra_side ra_menu">
     <ul>
-     <li><a href="Configuration.html">Configuration</a></li>
-     <li><a href="Application.html">Application</a></li>
-     <li><a href="Camera.html">Camera</a></li>
+     <li><a href="../raspberry/Configuration.html">Configuration</a></li>
+     <li><a href="../raspberry/Application.html">Application</a></li>
+     <li><a href="../raspberry/Camera.html">Camera</a></li>
     </ul>
   </nav>
   <nav class="ht_side ht_menu">
@@ -96,29 +96,27 @@
 <span class="prom">pi@raspberrypi</span>~$ sudo nano /etc/network/interfaces
   </pre>
   <pre>
-interfaces
+auto lo
 
-	auto lo
+iface lo inet loopback
+iface eth0 inet dhcp
 
-	iface lo inet loopback
-	iface eth0 inet dhcp
-
-	allow-hotplug wlan0
-	iface wlan0 inet static
-		address 10.1.4.206
-		netmask 255.255.255.0
-		network 10.1.4.0
-		broadcast 10.1.4.255
-		gateway 10.1.4.254
-		dns-nameservers 10.1.5.11 10.1.2.240
-		wpa-scan-ssid 1
-		wpa-ap-ssid 1
-		wpa-key-mgmt WPA-PSK
-		wpa-proto RSN WPA
-		wpa-pairwise CCMP TKIP
-		wpa-group CCMP TKIP
-		wpa-ssid "CTRLTEAM"
-		wpa-psk "rkthrrlwpdj"
+allow-hotplug wlan0
+iface wlan0 inet static
+	address 10.1.4.206
+	netmask 255.255.255.0
+	network 10.1.4.0
+	broadcast 10.1.4.255
+	gateway 10.1.4.254
+	dns-nameservers 10.1.2.240
+	wpa-scan-ssid 1
+	wpa-ap-ssid 1
+	wpa-key-mgmt WPA-PSK
+	wpa-proto RSN WPA
+	wpa-pairwise CCMP TKIP
+	wpa-group CCMP TKIP
+	wpa-ssid "CTRLTEAM"
+	wpa-psk "12345qwert"
   </pre>
   <p>여기서 wpa-psk값은 네트워크 비밀번호를 적으면 된다.</p>
   <p>설정이 완료되었으면 무선 랜카드를 장착한 후 재부팅 한다.</p>
